<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:backgroundTint="@android:color/transparent">

    <ImageView
        android:id="@+id/profil_imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="center"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_account" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/borderlessButtonStyle"
        android:backgroundTint="@android:color/transparent"
        app:icon="?attr/actionModeCloseDrawable"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/big_name_textField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/profil_imageView"
        tools:text="Caroline" />

    <android.support.v7.widget.CardView
        android:id="@+id/first_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/profil_imageView">
        <LinearLayout
            android:id="@+id/profil_informations_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#EFF3F2">

            <TextView
                android:id="@+id/name_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:fontFamily="sans-serif-condensed"
                android:paddingStart="10dp"
                android:text="Caroline"
                android:textAlignment="textStart"
                android:textColor="@android:color/black"
                android:textSize="35sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0.5dp"
                android:background="@android:color/white"
                android:orientation="vertical"

                android:paddingStart="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintRight_toRightOf="@+id/profil_location"
                        app:srcCompat="@drawable/pink_location" />

                    <TextView
                        android:id="@+id/profil_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="Saint Pierre du Mont à 5km"
                        android:textAlignment="textStart" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintRight_toRightOf="@+id/profil_location"
                        app:srcCompat="@drawable/pink_mobile" />

                    <TextView
                        android:id="@+id/profil_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="+33 6 86 57 90 14"
                        android:textAlignment="textStart" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintRight_toRightOf="@+id/profil_location"
                        app:srcCompat="@drawable/pink_language" />

                    <TextView
                        android:id="@+id/profil_network"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="www.facebook.fr/caroline"
                        android:textAlignment="textStart" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/first_card_view"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/about_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#EFF3F2"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:fontFamily="sans-serif-condensed"
                android:paddingStart="10dp"
                android:text="A propos de moi"
                android:textAlignment="textStart"
                android:textColor="@android:color/black"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0.5dp"
                android:background="@android:color/white"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:text="Bonjour! Je souhaiterai faire de la marche nordique. \nPas initiée, je recherche une ou plusieurs personnes susceptibles de m'accompagner ! J'aime les jeux de cartes tel la belote ou le tarot..."
                android:textAlignment="textStart" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/favoriteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_star_border_white_24dp"
        android:tint="#FFDD00"
        app:backgroundTint="#FFFFFF"
        app:borderWidth="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/big_name_textField"
        app:rippleColor="@color/colorAccent" />

</android.support.constraint.ConstraintLayout>